force-app/main/default/objects/Lead/fields/Est_preenchido__c.field-meta.xml
<CustomField>
    <fullName>Est_preenchido__c</fullName>
    <formula>IF (MobilePhone == null, &quot;Precisa do celular&quot;, &quot;celular preenchido&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Está preenchido?</inlineHelpText>
    <label>Está preenchido?</label>
    <type>Text</type>
</CustomField>