force-app/main/default/objects/Lead/fields/isTerraqueo__c.field-meta.xml
<CustomField>
    <fullName>isTerraqueo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para verificar se um herói é um terráqueo ou de outro planeta</description>
    <inlineHelpText>Selecionar se é terraqueo ou não</inlineHelpText>
    <label>É terráqueo?</label>
    <type>Checkbox</type>
</CustomField>