force-app/main/default/objects/Lead/fields/JaAtuouComoHeroi__c.field-meta.xml
<CustomField>
    <fullName>JaAtuouComoHeroi__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Informa se o herói já atuou como herói em alguma missão ou batalha</description>
    <inlineHelpText>Informar se o herói já atuou em alguma missão</inlineHelpText>
    <label>Já atuou como herói?</label>
    <type>Checkbox</type>
</CustomField>