force-app/main/default/objects/Lead/fields/NomeGuerra__c.field-meta.xml
<CustomField>
    <fullName>NomeGuerra__c</fullName>
    <description>Nome de guerra</description>
    <externalId>true</externalId>
    <label>Nome de guerra</label>
    <length>80</length>
    <type>Text</type>
</CustomField>