force-app/main/default/objects/Lead/fields/Planeta__c.field-meta.xml
<CustomField>
    <fullName>Planeta__c</fullName>
    <description>Informar qual é o planeta de origem caso não seja terraqueo</description>
    <inlineHelpText>Caso não seja terraqueo, informar o planeta</inlineHelpText>
    <label>Planeta</label>
    <length>80</length>
    <type>Text</type>
</CustomField>