force-app/main/default/objects/Lead/validationRules/Celular_preenchido.validationRule-meta.xml
<ValidationRule>
    <fullName>Celular_preenchido</fullName>
    <active>true</active>
    <description>Verificar se o campo Celular foi preenchido</description>
    <errorConditionFormula>MobilePhone = null</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>O campo celular deve ser preenchido</errorMessage>
</ValidationRule>