force-app/main/default/objects/Lead/validationRules/Preencher_planeta.validationRule-meta.xml
<ValidationRule>
    <fullName>Preencher_planeta</fullName>
    <active>true</active>
    <description>Se caso &apos;É terraqueo&apos; não for selecionado, pedir para informar o planeta</description>
    <errorConditionFormula>AND(NOT( isTerraqueo__c ), ISBLANK( Planeta__c ))</errorConditionFormula>
    <errorDisplayField>Planeta__c</errorDisplayField>
    <errorMessage>Informe o planeta</errorMessage>
</ValidationRule>