force-app/main/default/objects/Lead/listViews/Ordem_alfabetica.listView-meta.xml
<ListView>
    <fullName>Ordem_alfabetica</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FULL_NAME</field>
        <operation>equals</operation>
        <value>Andy Young</value>
    </filters>
    <label>Ordem alfabetica</label>
</ListView>